--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta
+      name="description"
+      content="Get healthy, radiant, and youthful-looking skin with SkinWise. Our premium skincare products are specially designed for men and made with high-quality, natural ingredients. From cleansers to moisturizers, we offer personalized advice to help you achieve your best skin yet. Try SkinWise today"
+    />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -22,7 +26,7 @@
     <div class="added">item was added successfully</div>
     <nav id="nav">
       <div class="container">
-        <a href="">SkinWise</a>
+        <a href="#home">SkinWise</a>
         <ul class="menu">
           <h2>menu</h2>
           <ul>
@@ -47,7 +51,7 @@
     <header id="home">
       <h1>SkinWise</h1>
       <p>Your Skin's Best Ally</p>
-      <a href="">learn more</a>
+      <a href="#about">learn more</a>
     </header>
     <main>
       <section id="shop">
